--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,6 @@
-
 body {
     background-color: rgb(54, 54, 54);
+    overflow: hidden;
 }
 
 @keyframes Load {
@@ -24,6 +24,8 @@ body {
     align-items: center;
     height: 25dvh;
     width: 50dvw;
+
+    max-width: 600px;
 }
 
  /* Headers*/ 
@@ -46,6 +48,7 @@ body {
     animation: Load 2s;
     animation-timing-function: ease-in-out;
 }
+
  /* Paragraphs*/ 
 .p {
     color: azure;
@@ -53,4 +56,33 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     animation: Load 2.2s;
     animation-timing-function: ease-in-out;
+}
+
+ /* Footer*/ 
+.footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #000;
+    border-radius: 5px;
+    color: white;
+    text-align: center;
+    padding: 2.5dvh 0;
+    font-size: 1rem;
+    z-index: 1000;
+}
+
+ /* Default Buttons*/ 
+.button1 {
+    background-color: chartreuse;
+    width: 25dvw;
+    height: 10dvh;
+    border: none;
+    border-radius: 1dvh;
+}
+
+ /* Events*/ 
+.button1:hover {
+    background-color: rgb(95, 190, 0);
 }
